--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p id="scoreBoard">Score: 0</p>
     </div>
     <button onclick="reset()">Reset Game</button>
-
+<h6>Developed by: Farooq Ahmed(FA)</h6>
     <script src="app.js"></script>
 </body>
 </html>
